--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,9 @@
     <string name="missing_episode_number">Missing episode number</string>
     <string name="missing_airing_date">Missing airing date</string>
     <string name="exception_message">There was a mistake in the request</string>
+    <string name="back">back</string>
+    <string name="episode_details">Episode Details</string>
+    <string name="episodes">Episodes</string>
+    <string name="missing_character_name">Missing character name</string>
+    <string name="missing_gender">Missing gender</string>
 </resources>
